--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="cputemp">
+                <span class="oi oi-clock" aria-hidden="true"></span> CPU temperature
+            </NavLink>
+        </li>
     </ul>
 </div>
 
