--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,9 @@
-@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
+    /*background: -webkit-radial-gradient(circle, #fcee92 0%,#ebcf12 100%);*/
+    height: 100%;
+    width: 100%;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -9,9 +12,9 @@ a {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 app {
@@ -30,66 +33,66 @@ app {
     flex: 1;
 }
 
-.main .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-}
+    .main .top-row {
+        /*background-color: #f7f7f7;*/
+        /*border-bottom: 1px solid #d6d5d5;*/
+        justify-content: flex-end;
+    }
 
-.main .top-row > a {
-    margin-left: 1.5rem;
-}
+        .main .top-row > a {
+            margin-left: 1.5rem;
+        }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #e4e4e4 70%, rgba(240, 151, 36, 0.29) 100%);
 }
 
-.sidebar .top-row {
-    background-color: rgba(0,0,0,0.4);
-}
+    .sidebar .top-row {
+        background-color: rgba(228, 228, 228, 1.0);
+    }
 
-.sidebar .navbar-brand {
-    font-size: 1.1rem;
-}
+    .sidebar .navbar-brand {
+        font-size: 1.1rem;
+    }
 
-.sidebar .oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
-}
+    .sidebar .oi {
+        width: 2rem;
+        font-size: 1.1rem;
+        vertical-align: text-top;
+        top: -2px;
+    }
 
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
 }
 
-.nav-item:first-of-type {
-    padding-top: 1rem;
-}
+    .nav-item:first-of-type {
+        padding-top: 1rem;
+    }
 
-.nav-item:last-of-type {
-    padding-bottom: 1rem;
-}
+    .nav-item:last-of-type {
+        padding-bottom: 1rem;
+    }
 
-.nav-item a {
-    color: #d7d7d7;
-    border-radius: 4px;
-    height: 3rem;
-    display: flex;
-    align-items: center;
-    line-height: 3rem;
-}
+    .nav-item a {
+        color: #212121;
+        border-radius: 4px;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        line-height: 3rem;
+    }
 
-.nav-item a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
+        .nav-item a.active {
+            background-color: rgba(255,255,255,0.5);
+            color: #1d1d1d;
+        }
 
-.nav-item a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+        .nav-item a:hover {
+            background-color: rgba(255,255,255,0.8);
+            color: #474747;
+        }
 
 .content {
     padding-top: 1.1rem;
@@ -148,3 +151,105 @@ app {
         display: block;
     }
 }
+
+
+/* THERMOMETER ――――――――――――――――――――――――― */
+/* taken from: https://codepen.io/Arkellys/pen/rgpNBK */
+
+#wrapper {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#termometer {
+    width: 25px;
+    background: #38383f;
+    height: 240px;
+    position: relative;
+    border: 9px solid #2a2a2e;
+    border-radius: 20px;
+    z-index: 1;
+    margin-bottom: 50px;
+}
+
+    #termometer:before, #termometer:after {
+        position: absolute;
+        content: "";
+        border-radius: 50%;
+    }
+
+    #termometer:before {
+        width: 100%;
+        height: 34px;
+        bottom: 9px;
+        background: #38383f;
+        z-index: -1;
+    }
+
+    #termometer:after {
+        transform: translateX(-50%);
+        width: 50px;
+        height: 50px;
+        background-color: #3dcadf;
+        bottom: -41px;
+        border: 9px solid #2a2a2e;
+        z-index: -3;
+        left: 50%;
+    }
+
+    #termometer #graduations {
+        height: 59%;
+        top: 20%;
+        width: 50%;
+    }
+
+        #termometer #graduations, #termometer #graduations:before {
+            position: absolute;
+            border-top: 2px solid rgba(0, 0, 0, 0.5);
+            border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+        }
+
+            #termometer #graduations:before {
+                content: "";
+                height: 34%;
+                width: 100%;
+                top: 32%;
+            }
+
+    #termometer #temperature {
+        bottom: 0;
+        background: linear-gradient(#f17a65, #3dcadf) no-repeat bottom;
+        width: 100%;
+        border-radius: 20px;
+        background-size: 100% 240px;
+        transition: all 0.2s ease-in-out;
+    }
+
+        #termometer #temperature, #termometer #temperature:before, #termometer #temperature:after {
+            position: absolute;
+        }
+
+            #termometer #temperature:before {
+                content: attr(data-value);
+                background: rgba(0, 0, 0, 0.7);
+                color: white;
+                z-index: 2;
+                padding: 5px 10px;
+                border-radius: 5px;
+                font-size: 1em;
+                line-height: 1;
+                transform: translateY(50%);
+                left: calc(100% + 1em / 1.5);
+                top: calc(-1em + 5px - 5px * 2);
+            }
+
+            #termometer #temperature:after {
+                content: "";
+                border-top: 0.4545454545em solid transparent;
+                border-bottom: 0.4545454545em solid transparent;
+                border-right: 0.6666666667em solid rgba(0, 0, 0, 0.7);
+                left: 100%;
+                top: calc(-1em / 2.2 + 5px);
+            }
