--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @namespace Cloudberry.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Blazor.Extensions.Canvas
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,5 +17,6 @@
     <app>@(await Html.RenderComponentAsync<App>())</app>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="scripts/blazor.extensions.canvas.js"></script>
 </body>
 </html>
