--- a/Pages/CpuTemperature.razor
+++ b/Pages/CpuTemperature.razor
@@ -32,7 +32,7 @@
     bool _isDisposed = false;
     List<double> data;
 
-    protected override async Task OnInitAsync()
+    protected override async Task OnInitializedAsync()
     {
         data = new List<double>();
         while (true)
@@ -49,7 +49,7 @@
         }
     }
 
-    protected override async Task OnAfterRenderAsync()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         this._context = await this._canvasReference.CreateCanvas2DAsync();
         await this._context.BeginBatchAsync();
