Set GPIO pin to output state.

--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -15,7 +15,7 @@
 
     protected override void OnInitialized()
     {
-        gpioController.OpenPin(pin);
+        gpioController.OpenPin(pin, PinMode.Output);
     }
 
     public void Dispose()
