--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="oi oi-clock" aria-hidden="true"></span> CPU temperature
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="marecheck">
+                <span class="oi oi-star" aria-hidden="true"></span> Marecheck
+            </NavLink>
+        </li>
     </ul>
 </div>
 
