Fix OnClick event

--- a/Pages/Marecheck.razor
+++ b/Pages/Marecheck.razor
@@ -91,7 +91,7 @@
                     Intersect = true,
                     Mode = InteractionMode.Y
                 },
-                OnHover = new DelegateHandler<ChartMouseEvent>(OnLineClick),
+                OnClick = new DelegateHandler<ChartMouseEvent>(OnLineClick),
             }
         };
 
