Do not use OnClick event handler. It's broken somehow (maybe preview version?).

--- a/Pages/Marecheck.razor
+++ b/Pages/Marecheck.razor
@@ -91,7 +91,7 @@
                     Intersect = true,
                     Mode = InteractionMode.Y
                 },
-                OnClick = new DelegateHandler<ChartMouseEvent>(OnLineClick),
+                //OnClick = new DelegateHandler<ChartMouseEvent>(OnLineClick),
             }
         };
 
@@ -111,8 +111,8 @@
 
     }
 
-    void OnLineClick(JObject mouseEvent, JArray activeElements)
-    {
-        
-    }
+    //void OnLineClick(JObject mouseEvent, JArray activeElements)
+    //{
+
+    //}
 }
