--- a/Pages/Marecheck.razor
+++ b/Pages/Marecheck.razor
@@ -36,7 +36,7 @@
         <div class="my-4">
             @foreach (var imageFilepath in selectedDay.Images)
             {
-                <img src="file://asus-router/data/marek/denik/den_03/IMG_4328.jpg" class="img-fluid" />
+                <a href="/denik/den_00/IMG_4313.JPG">go</a>
             }
         </div>
     }
