--- a/Pages/Marecheck.razor
+++ b/Pages/Marecheck.razor
@@ -42,6 +42,10 @@
     }
 </div>
 
+@*<div class="my-4">
+    <button class="btn btn-secondary btn-block mt-4" @onclick="AddTodayAsync" >Přidat dnešní den</button>
+</div>*@
+
 
 
 @code {
@@ -159,7 +163,8 @@
     {
         if (selectedDayNumber >= 0 && selectedDayText is object)
         {
-            await MarkWeightService.UpdateMarkDayAsync(selectedDayNumber, selectedDayText);
+            var updatedDay = await MarkWeightService.UpdateMarkDayAsync(selectedDayNumber, selectedDayText);
+            diary[selectedDayNumber] = updatedDay;
         }
     }
 
