Update text input

--- a/Pages/Marecheck.razor
+++ b/Pages/Marecheck.razor
@@ -29,7 +29,7 @@
 <div class="my-4">
     @if (diary.TryGetValue(selectedDayNumber, out var selectedDay))
     {
-        <textarea class="form-control" @bind="selectedDayText" style="height: 200px;"></textarea>
+        <textarea class="form-control" @bind="selectedDayText" @oninput="OnSelectedDayTextInput" style="height: 200px;"></textarea>
 
         <button class="btn btn-primary btn-block mt-4" @onclick="SaveChangesAsync" disabled="@(!isTextDirty)">Uložit změny</button>
 
@@ -161,11 +161,15 @@
         }
     }
 
-    void OnSelectedDayTextChanged(ChangeEventArgs args)
+    //void OnSelectedDayTextChanged(ChangeEventArgs args)
+    //{
+    //    isTextDirty = true;
+    //}
+
+    public void OnSelectedDayTextInput()
     {
         isTextDirty = true;
     }
-
     async Task SaveChangesAsync()
     {
         if (selectedDayNumber >= 0 && selectedDayText is object)
