--- a/Pages/Marecheck.razor
+++ b/Pages/Marecheck.razor
@@ -43,7 +43,7 @@
         <div class="my-4">
             @foreach (var videoFilepath in selectedDay.Videos)
             {
-                <video src="@videoFilepath" class="img-fluid"></video>
+                <video width="320" height="240" src="@videoFilepath"></video>
             }
         </div>
     }
