Turn off video autoplay

--- a/Pages/Marecheck.razor
+++ b/Pages/Marecheck.razor
@@ -43,10 +43,12 @@
         <div class="my-4">
             @foreach (var videoFilepath in selectedDay.Videos)
             {
-                <video width="200" controls autoplay muted>
-                    <source src="@videoFilepath" type="video/mp4">
-                    <!-- https://stackoverflow.com/questions/27440596/html5-video-tag-not-showing-thumbnail-on-mobile-safari -->
-                </video>
+                <div class="border-dark m-2">
+                    <video width="200" controls>
+                        <source src="@videoFilepath" type="video/mp4">
+                        <!-- https://stackoverflow.com/questions/27440596/html5-video-tag-not-showing-thumbnail-on-mobile-safari -->
+                    </video>
+                </div>
             }
         </div>
     }
